Use database for events
